# docs/swagger.json
@@ -64,6 +64,58 @@
                 }
             }
         },
+        "/chatbot/response": {
+            "post": {
+                "description": "Get chatbot response",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chatbot"
+                ],
+                "summary": "Get Chatbot response",
+                "parameters": [
+                    {
+                        "description": "Get Chatbot Response Request",
+                        "name": "chatbot_request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.GetChatbotResponseRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/agents.ChatbotResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/health": {
             "get": {
                 "description": "get the status of the server.",
@@ -729,6 +781,14 @@
         }
     },
     "definitions": {
+        "agents.ChatbotResponse": {
+            "type": "object",
+            "properties": {
+                "response": {
+                    "type": "string"
+                }
+            }
+        },
         "agents.GeneratedDialogueContinuationExercise": {
             "type": "object",
             "properties": {
@@ -827,6 +887,14 @@
             "properties": {
                 "lessonId": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.GetChatbotResponseRequest": {
+            "type": "object",
+            "properties": {
+                "question": {
+                    "type": "string"
                 }
             }
         },
