# dto/chatbot/get_chatbot_response.go
@@ -1,0 +1,5 @@
+package dto
+
+type GetChatbotResponseRequest struct {
+	Question string
+}
